Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14044

Check llogid to avoid crash the server.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue should be easy to reproduce. Just run command as below:

      # lctl --device MGS llog_info  [0xa:0x0:0x0]
      
      

      The server will be crashed immediately.

      [ 3131.322570] LustreError: 9474:0:(osd_handler.c:1066:osd_fid_lookup()) ASSERTION( fid_is_sane(fid) || fid_is_idif(fid) ) failed: [0x0:0xa:0x0]
      [ 3131.322611] LustreError: 9474:0:(osd_handler.c:1066:osd_fid_lookup()) LBUG
      [ 3131.322619] Pid: 9474, comm: lt-lctl 3.10.0-1062.12.1.el7.x86_64 #1 SMP Tue Feb 4 23:02:59 UTC 2020
      [ 3131.322626] Call Trace:
      [ 3131.322699] [<ffffffffc04047cc>] libcfs_call_trace+0x8c/0xc0 [libcfs]
      [ 3131.322763] [<ffffffffc040487c>] lbug_with_loc+0x4c/0xa0 [libcfs]
      [ 3131.322788] [<ffffffffc0e30928>] osd_fid_lookup+0xc8/0x1d60 [osd_ldiskfs]
      [ 3131.322884] [<ffffffffc0e32621>] osd_object_init+0x61/0x110 [osd_ldiskfs]
      [ 3131.322951] [<ffffffffc05b656b>] lu_object_start.isra.33+0x8b/0x120 [obdclass]
      [ 3131.323095] [<ffffffffc05b9fb1>] lu_object_find_at+0x1e1/0x8e0 [obdclass]
      [ 3131.323147] [<ffffffffc05bb7cd>] dt_locate_at+0x1d/0xb0 [obdclass]
      [ 3131.323251] [<ffffffffc057c86e>] llog_osd_open+0x50e/0xf30 [obdclass]
      [ 3131.323320] [<ffffffffc0568f3a>] llog_open+0x15a/0x3e0 [obdclass]
      [ 3131.323423] [<ffffffffc058f2ab>] llog_ioctl+0x19b/0xb80 [obdclass]
      [ 3131.323616] [<ffffffffc0e9fbd4>] mgs_iocontrol+0x744/0xdf0 [mgs]
      [ 3131.323667] [<ffffffffc0582b7d>] class_handle_ioctl+0x18ed/0x1e20 [obdclass]
      [ 3131.323771] [<ffffffffc0583182>] obd_class_ioctl+0xd2/0x170 [obdclass]
      [ 3131.324007] [<ffffffffa9a5fbc0>] do_vfs_ioctl+0x3a0/0x5a0
      [ 3131.324027] [<ffffffffa9a5fe61>] SyS_ioctl+0xa1/0xc0
      [ 3131.324044] [<ffffffffa9f8dede>] system_call_fastpath+0x25/0x2a
      [ 3131.324062] [<ffffffffffffffff>] 0xffffffffffffffff
      [ 3131.324089] Kernel panic - not syncing: LBUG

            ys Yang Sheng
            ys Yang Sheng
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: